# whitegear

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TXTSRC.tbl  imgui.ini
core/: CMakeLists.txt  arch_info.cpp  arch_info.hpp  core.hpp  hash.cpp  hash.hpp  image.cpp  image.hpp  io.cpp  io.hpp  logger.cpp  logger.hpp  macros.hpp  ref_counted.cpp  ref_counted.hpp  required.hpp  ret.hpp  smart_ptr.hpp  time.cpp  time.hpp  typedefs.hpp  utils.hpp  uuid.cpp
core/containers/: array_view.hpp  blocked_allocator.cpp  blocked_allocator.hpp  bounded_array.hpp  hash_base.cpp  hash_base.hpp  hashmap.hpp  hashset.hpp  reused_queue.hpp  set.hpp  string.cpp  string.hpp  string_view.hpp
core/experimental/: hash_base.cpp  hash_base.hpp  hashmap.hpp
core/pts/: base.hpp  blob.cpp  blob.hpp  io.cpp  io.hpp  plain_pts.cpp  plain_pts.hpp  pts_base.hpp  pts_blob.cpp  pts_blob.hpp  pts_io.cpp  pts_io.hpp
editor/: CMakeLists.txt  editor_application.cpp  editor_application.hpp  imgui_tweaks.cpp  imgui_tweaks.hpp  world_editor_module.cpp  world_editor_module.hpp
editor_shaders/: Makefile  common.hlsl  ps_basic.hlsl  ps_light_phong.hlsl  ps_vertex_color.hlsl  ps_vertex_texture.hlsl  vs_basic.hlsl  vs_vertex_color.hlsl
editor_shaders/compiled/: ps_basic.cso  ps_vertex_color.cso  ps_vertex_texture.cso  vs_basic.cso  vs_vertex_color.cso
editor_shaders/vs2022_compiler/: vs2022_compiler.sln  vs2022_compiler.vcxproj  vs2022_compiler.vcxproj.filters
editor_shaders/vs2022_compiler/x64/Debug/: vs2022_compiler.exe.recipe
entry/: CMakeLists.txt  start.cpp
graphics/: CMakeLists.txt  cursor.cpp  cursor.hpp  cursor_default.hpp  cursor_default_normal.hpp  device.cpp  device.hpp  instance.cpp  instance.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
math/: CMakeLists.txt  color.hpp  curve.hpp  free_camera.cpp  free_camera.hpp  frustum.cpp  geometry.hpp  geometry_buffer.hpp  mat.hpp  mat4.hpp  matrix_base.hpp  noise.cpp  noise.hpp  quaternion.hpp  scalar_base.hpp  scalar_func.cpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector_base.hpp  vertex.hpp  viewport.cpp  viewport.hpp
renda/: CMakeLists.txt  renderer_api.cpp  renderer_api.hpp  rendering_engine.cpp  rendering_engine.hpp  resource_storage.cpp  resource_storage.hpp  vertex_layout.cpp
renda/api/: common.hpp  gpu_device.hpp  gpu_resource.hpp  swapchain.hpp  target_buffer.hpp
renda/backend/renda_directx/: dx_bindable.hpp  dx_bindable_constant_buffer_base.hpp  dx_bindable_geometry_topology.cpp  dx_bindable_geometry_topology.hpp  dx_bindable_index_buffer.cpp  dx_bindable_index_buffer.hpp  dx_bindable_input_layout.cpp  dx_bindable_input_layout.hpp  dx_bindable_per_frame_constant_buffer.cpp  dx_bindable_per_frame_constant_buffer.hpp  dx_bindable_per_renderable_constant_buffer.cpp  dx_bindable_per_renderable_constant_buffer.hpp  dx_bindable_pixel_shader.cpp  dx_bindable_pixel_shader.hpp  dx_bindable_transform_constant_buffer.cpp  dx_bindable_transform_constant_buffer.hpp  dx_bindable_vertex_buffer.cpp  dx_bindable_vertex_buffer.hpp  dx_bindable_vertex_shader.cpp  dx_bindable_vertex_shader.hpp  dx_common_mesh_cube.cpp  dx_common_mesh_cube.hpp  dx_graphics.cpp  dx_graphics.hpp  dx_info_manager.cpp  dx_info_manager.hpp  dx_render_target_buffer.cpp  dx_render_target_buffer.hpp  dx_renderable.cpp  dx_renderable.hpp  dx_scene_renderable.cpp  dx_scene_renderable.hpp  minimal.hpp  rendering_engine_directx.cpp  rendering_engine_directx.hpp
renda/backend/renda_directx/bindable/: dx_bindable_base.hpp  dx_constant_buffer_base.hpp  dx_geometry_topology.cpp  dx_geometry_topology.hpp  dx_index_buffer.cpp  dx_index_buffer.hpp  dx_input_layout.cpp  dx_input_layout.hpp  dx_per_frame_constant_buffer.cpp  dx_per_frame_constant_buffer.hpp  dx_per_renderable_constant_buffer.cpp  dx_per_renderable_constant_buffer.hpp  dx_pixel_shader.cpp  dx_pixel_shader.hpp  dx_vertex_buffer.cpp  dx_vertex_buffer.hpp  dx_vertex_shader.cpp  dx_vertex_shader.hpp
renda/backend/renda_dx11/: CMakeLists.txt  constant_buffer_base_dx11.cpp  geometry_buffer_dx11.cpp  gpu_device.cpp  gpu_device_dx11.cpp  gpu_topology.cpp  gpu_topology_dx11.cpp  minimal.hpp  rendering_engine.cpp  sampler_dx11.cpp  shader_program.cpp  shader_program_dx11.cpp  swapchain.cpp  swapchain_dx11.cpp  target_buffer.cpp  target_buffer_dx11.cpp  texture_dx11.cpp  utils_dx11.cpp  utils_dx11.hpp  vertex_input_layout.cpp  vertex_input_layout_dx11.cpp  vertex_layout.cpp
renda/backend/renda_null/: rendering_engine_null.cpp  rendering_engine_null.hpp
renda/backend/renda_vulkan/: CMakeLists.txt  minimal.hpp  rendering_engine_vulkan.cpp  rendering_engine_vulkan.hpp  vk_graphics.cpp  vk_graphics.hpp  vk_result.cpp  vk_result.hpp
renda/drawing/: common_cube_renderable.cpp  common_cube_renderable.hpp  common_skinned_cube_renderable.cpp  common_skinned_cube_renderable.hpp  constant_buffer_per_frame.cpp  constant_buffer_per_frame.hpp  constant_buffer_per_object.cpp  constant_buffer_per_object.hpp  renderable.cpp  renderable.hpp
resources/: CMakeLists.txt  base.hpp  build.cpp  cache.hpp  name.cpp  text_resource.hpp  text_resource_cache.cpp  text_resource_loader.cpp
runtime/: CMakeLists.txt  runtime_application.cpp  runtime_application.hpp  runtime_core.cpp  runtime_core.hpp  runtime_module.cpp  runtime_module.hpp  user_input.cpp  user_input.hpp
scene/: CMakeLists.txt  component.cpp  component.hpp  component_array.hpp  component_manager.hpp  ecs.cpp  ecs.hpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  entity_queue.cpp  entity_queue.hpp  scene_module.cpp  scene_module.hpp  scene_system_manager.cpp  system.hpp  world.cpp  world.hpp  world__common_mesh_rendering_system.cpp  world__entities_update_system.cpp  world__rendering_system.cpp  world_controls.cpp  world_registry.cpp  world_registry.hpp
scene/components/: common_geometry.hpp  name_id.hpp  transform.hpp
tests/: CMakeLists.txt  containers_array_view.hpp  containers_string.hpp  containers_string_view.hpp  core_arch_support.hpp  core_logger.hpp  main.cpp  math_vectors.hpp  pts.hpp  test_framework.hpp
tools/: CMakeLists.txt  img2cursor.cpp
(+4 files in other folders)
