SET(Core_SOURCES arch_info.cpp logger.cpp containers/string_view.hpp pts/pts_blob.hpp pts/pts_blob.cpp pts/pts_io.hpp pts/pts_io.cpp io.hpp io.cpp containers/string.hpp containers/string.cpp containers/bounded_array.hpp macros.hpp hash.hpp hash.cpp smart_ptr.hpp containers/set.hpp ret.hpp image.cpp image.hpp utils.hpp containers/hash_base.hpp containers/hash_base.cpp containers/blocked_allocator.hpp containers/blocked_allocator.cpp containers/hashmap.hpp time.hpp time.cpp)
ADD_LIBRARY(wg_core STATIC ${Core_SOURCES})