SET(Core_SOURCES arch_info.cpp logger.cpp containers/string_view.hpp pts/blob.hpp pts/blob.cpp pts/io.hpp pts/io.cpp io.hpp io.cpp containers/string.hpp containers/string.cpp containers/bounded_array.hpp macros.hpp hash.hpp smart_ptr.hpp ret.hpp image.cpp image.hpp utils.hpp containers/hash_base.hpp containers/hash_base.cpp containers/blocked_allocator.hpp containers/blocked_allocator.cpp containers/hashmap.hpp time.hpp time.cpp ref_counted.cpp ref_counted.hpp containers/hashset.hpp containers/reused_queue.hpp required.hpp pts/plain_pts.hpp pts/plain_pts.cpp)
ADD_LIBRARY(wg_core STATIC ${Core_SOURCES})